# token-bar

./: .gitignore  LICENSE  README.md  config.example.json  index.html  package-lock.json  package.json
src/: App.css  App.tsx  main.tsx  tray.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main-fs.json  main-tray.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: UsageHistoryChart.tsx  UsagePanel.css  UsagePanel.tsx
src/services/: config.ts  history.ts  usage.ts
